--- a/public/css/login.css
+++ b/public/css/login.css
@@ -40,6 +40,7 @@ body {
 
 form {
   background: #fff;
+  border-radius: 10px;
   overflow: hidden;
   position: relative;
   box-shadow: 0 5px 10px 5px rgba(0,0,0,0.2);
